# prop

./: .coveragerc  .gitignore  .mypy  .travis.yml  LICENSE.md  README.md  setup.cfg
examples/api-request/: __main__.py  requirements.txt
examples/wikipedia/: __main__.py  requirements.txt
src/prop/: __init__.py  _helper.py  chain_link.py  chain_promise.py  promise.py
src/prop/abstract/: __init__.py  promise.py
src/prop/chain_link/: __init__.py  fulfillment.py  rejection.py  resolution.py
src/prop/chain_links/: fulfillment.py  rejection.py  resolution.py
tests/: README.md  test_promise_chain.py  test_promise_coro.py  test_promise_future.py  test_promise_management.py  test_promise_stack.py  test_promise_unhandle_exception.py
